<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qcar2_mixer</name>
  <version>0.0.0</version>
  <description>QCar2 final motor command mixer package (pre-hardware mux/mixer stage).</description>
  <maintainer email="brayandurantoconas@gmail.com">hackbrian</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rcl_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_common</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_amcl</depend>
  <depend>cv_bridge</depend>

  <depend>qcar2_interfaces</depend>
  <depend>qcar2_object_detections</depend>
  <depend>qcar2_nodex</depend>
  <depend>qcar2_nodes</depend>

  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
